--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -23,7 +23,7 @@ main:
 
   - title: "学术会议"
     url: "/zh-cn/#conferences"
-  - title: "教学"
+  - title: "教学授课"
     url: "/zh-cn/#teaching"
 
   - title: "其他"
