--- a/_config.yml
+++ b/_config.yml
@@ -147,7 +147,7 @@ publications:
     img: 
     position: "作者"
     html: "http://dx.doi.org/10.11783/j.issn.1002-3674.2023.04.013"
-    pdf: "pdf/COVID-19%E6%BD%9C%E4%BC%8F%E6%9C%9F%E5%88%86%E5%B8%83%E4%BC%B0%E8%AE%A1%E7%9A%84%E7%BB%9F%E8%AE%A1%E5%AD%A6%E6%96%B9%E6%B3%95%E6%AF%94%E8%BE%83.pdf"
+    pdf: "/pdf/COVID-19%E6%BD%9C%E4%BC%8F%E6%9C%9F%E5%88%86%E5%B8%83%E4%BC%B0%E8%AE%A1%E7%9A%84%E7%BB%9F%E8%AE%A1%E5%AD%A6%E6%96%B9%E6%B3%95%E6%AF%94%E8%BE%83.pdf"
     other: "2023,40(4):540-545+548"
     JCR: "北大核心1区"
     IF: "1.228"
